@startuml S iManggis-ClassDiagram
!theme plain

package "public" {

  class "rt" as rtTable {
    id : uuid PK
    nomor_rt : varchar(10) UNIQUE NOT NULL
    nama_ketua : varchar(100) NOT NULL
    no_wa_rt : varchar(20) NULL
    rw_id : varchar(10)
    created_at : timestamptz
    updated_at : timestamptz
  }

  class "permohonan" as permohonanTable {
    id : uuid PK
    tiket : varchar(20) UNIQUE NOT NULL
    nama : varchar(100) NOT NULL
    nik : varchar(16) NULL
    alamat : text NOT NULL
    telepon : varchar(20) NOT NULL
    layanan : varchar(100) NOT NULL
    sub_layanan : varchar(100) NULL
    deskripsi : text NULL
    nomor_rt : varchar(10) FK
    status : varchar(50) DEFAULT 'MENUNGGU'
    catatan : text NULL
    lampiran_url : text[] NULL
    fonnte_msg_id : varchar(100) NULL
    rt_approved_at : timestamptz NULL
    rt_approved_via : varchar(20) NULL
    kelurahan_approved_at : timestamptz NULL
    surat_url : text NULL
    created_at : timestamptz
    updated_at : timestamptz
  }

  class "pengaduan" as pengaduanTable {
    id : uuid PK
    tiket : varchar(20) UNIQUE NOT NULL
    nama : varchar(100) NOT NULL
    telepon : varchar(20) NULL
    email : varchar(255) NULL
    topik : varchar(255) NOT NULL
    pesan : text NOT NULL
    status : varchar(50) DEFAULT 'MENUNGGU'
    created_at : timestamptz
    updated_at : timestamptz
  }

  class "laporan_status_log" as logTable {
    id : uuid PK
    laporan_id : uuid NOT NULL
    from_status : varchar(50) NOT NULL
    to_status : varchar(50) NOT NULL
    changed_by : varchar(100) NOT NULL
    changed_at : timestamptz NOT NULL
    note : text NULL
  }

  class "website_assets" as assetsTable {
    id : uuid PK
    filename : varchar(255) NOT NULL
    storage_url : text NOT NULL
    category : varchar(100) NOT NULL
    alt_text : text NULL
    caption : text NULL
    is_active : boolean DEFAULT true
    sort_order : int DEFAULT 0
    metadata : jsonb NULL
    created_by : uuid FK
    created_at : timestamptz
    updated_at : timestamptz
  }

  class "staff" as staffTable {
    id : uuid PK
    email : varchar(255) UNIQUE NOT NULL
    password : varchar(255)
    nama : varchar(100) NOT NULL
    created_at : timestamptz
    updated_at : timestamptz
  }
}

' ===== RELATIONSHIPS =====

permohonanTable "1" --> "*" logTable : owns

permohonanTable --> rtTable : FK nomor_rt

staffTable "1" --> "*" assetsTable : uploads

note bottom of permohonanTable
  Status values: MENUNGGU | DISETUJAI_RT |
  DITOLAK_RT | DIPROSES | SELESAI | DITOLAK
end note

note bottom of pengaduanTable
  Status values: MENUNGGU | DIPROSES | SELESAI | DITOLAK
end note

note bottom of logTable
  PERHATIAN:
  - laporan_id bisa uuid permohonan ATAU pengaduan
  - Tidak ada kolom tipe (report_type)
  - foreign key hanya ke permohonan
    (pengaduan tidak punya relasi)
end note

note bottom of staffTable
  PERHATIAN:
  - Tidak ada kolom role
  - Semua staff punya hak akses sama
  - Tidak ada RBAC/fine-grained permission
end note

note right of pengaduanTable
  TIDAK punya kolom nomor_rt
  sehingga tidak bisa filter
  berdasarkan RT terkait
end note

@enduml
